# kdl_parser_standalone

./: .gitignore  CMakeLists.txt  IRB2600_12_185_ModiTcp.urdf  LICENSE  README.md  test_so100.cpp
include/kdl_parser/: kdl_parser.hpp
src/: kdl_parser.cpp
